--- a/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
+++ b/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AfipWrapperService.svc" />
+    <Content Include="SubidaArchivoService.svc" />
     <Content Include="EmailTemplates\DocumentosPendientes.htm" />
     <Content Include="MaestroService.svc" />
     <Content Include="ProcesoCorridaService.svc" />
@@ -99,7 +100,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>1500</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
