--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -15,6 +15,15 @@
     <add key="cuit" value="23289508759" />
     <add key="storeName" value="TrustedPeople" />
     <add key="storeLocation" value="LocalMachine" />
+
+
+    <add key="MailSubject" value="Endesa - Usted tiene Documentos para Visualizar" />
+    <add key="MailFrom" value="test@test.com" />
+    <add key="MailReplayTo" value="test@test.com" />
+    <add key="MailBodyPathHtml" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\trunk\src\FacturaElectronica.Ws.Host\EmailTemplates\DocumentosPendientes.htm" />
+    <add key="MailHost" value="" />
+    <add key="MailPort" value="" />       
+
     <!--CurrentUser-->
   </appSettings>
 
@@ -110,6 +119,21 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
+        <binding name="WSHttpBinding_ISubidaArchivoService" closeTimeout="00:01:00"
+           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+           maxBufferPoolSize="555524288" maxReceivedMessageSize="55665536"
+           messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+           allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+              enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
       </wsHttpBinding>
     </bindings>
     <services>
@@ -128,6 +152,15 @@
                   binding="wsHttpBinding"
                   bindingConfiguration="WSHttpBinding_IMaestroService"
                   contract="FacturaElectronica.Common.Services.IMaestrosService" />
+        <endpoint address="mex"
+                  binding="mexHttpsBinding"
+                  contract="IMetadataExchange" />
+      </service>
+      <service name="FacturaElectronica.Business.Services.SubidaArchivoService" behaviorConfiguration="ProcesoCorridaBehavior" >
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="WSHttpBinding_ISubidaArchivoService"
+                  contract="FacturaElectronica.Common.Services.ISubidaArchivoService" />
         <endpoint address="mex"
                   binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
