--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -17,8 +17,11 @@
     <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQL2008STD;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>-->
   <system.serviceModel>
-    <behaviors>
+    <behaviors>    
       <endpointBehaviors>
+        <behavior name="bigItemInGraph">
+          <dataContractSerializer maxItemsInObjectGraph="500000" />
+        </behavior>
         <behavior name="noRevocation">
           <clientCredentials>
             <serviceCertificate>
@@ -30,40 +33,78 @@
     </behaviors>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+        <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
           <security mode="TransportWithMessageCredential">
-            <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default"/>
+            <transport clientCredentialType="None" proxyCredentialType="None" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
-        <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+        <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
           <security mode="TransportWithMessageCredential">
-            <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default"/>
+            <transport clientCredentialType="None" proxyCredentialType="None" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
-
         </binding>
-        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
           <security mode="TransportWithMessageCredential">
-            <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default"/>
+            <transport clientCredentialType="None" proxyCredentialType="None" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_ISubidaArchivoService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://endesafews/ProcesoCorridaService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService" contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">
-      </endpoint>
-      <endpoint address="https://endesafews/MaestroService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">
-      </endpoint>
-      <endpoint address="https://endesafews/AfipWrapperService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">
-      </endpoint>
+      <endpoint address="https://endesafews/ProcesoCorridaService.svc" 
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService" behaviorConfiguration="bigItemInGraph"
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
+      <endpoint address="https://endesafews/MaestroService.svc" binding="wsHttpBinding" behaviorConfiguration="bigItemInGraph"
+        bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
+        name="WSHttpBinding_IMaestrosService" />
+      <endpoint address="https://endesafews/AfipWrapperService.svc" behaviorConfiguration="bigItemInGraph"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
+        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService" />
+      <endpoint address="https://endesafews/SubidaArchivoService.svc" behaviorConfiguration="bigItemInGraph"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISubidaArchivoService"
+        contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
+        name="WSHttpBinding_ISubidaArchivoService" />
     </client>
 
     <diagnostics>
