--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -26,6 +26,7 @@
     <authentication mode="Forms">
 			<forms loginUrl="~/Account/Login.aspx" 
              defaultUrl="~/Default.aspx" 
+             requireSSL="true"
              timeout="2880"/>
 		</authentication>
     <authorization>
