--- a/src/FacturaElectronica.Business/FacturaElectronica.Business.csproj
+++ b/src/FacturaElectronica.Business/FacturaElectronica.Business.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\ApiAutenticacion\trunk\src\WebFramework\Web.Framework.csproj">
+    <ProjectReference Include="..\..\..\..\..\..\Adrian\VesubioSVN\vesuapiauth\trunk\src\WebFramework\Web.Framework.csproj">
       <Project>{0EEED093-28DA-4ACB-BC25-E961C55E72C6}</Project>
       <Name>Web.Framework</Name>
     </ProjectReference>
