Entrada nueva en el Web.config

--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -59,5 +59,6 @@
 	</system.webServer>
   <appSettings>
     <add key="cantUltimosReg" value="5"/>
+    <add key="siteCompany" value="http://www.endesacemsa.com/"/>
   </appSettings>
 </configuration>
