--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -3,19 +3,11 @@
   <appSettings>
     <add key="PathDestinoArchivosAFIPParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml"/>
     <add key="PathDestinoArchivosFacturaConCAE" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosPDF"/>
+    <add key="FTPAddress" value="ftp://endesafews/"/>
+    <add key="FTPUser" value="Adrian"/>
+    <add key="FTPPassword" value="Adr1an"/>
   </appSettings>
-
-  <!--<appSettings>
-    <add key="idServicioNegocio" value="wsfe" />
-    <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
-    <add key="cuit" value="23289508759" />
-    <add key="storeName" value="TrustedPeople" />
-    <add key="storeLocation" value="CurrentUser" />
-  </appSettings>-->
-
-  <!--<connectionStrings>
-    <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQL2008STD;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
-  </connectionStrings>-->
+ 
   <system.serviceModel>
     <behaviors>    
       <endpointBehaviors>
