--- a/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
+++ b/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
@@ -59,6 +59,7 @@
     <Content Include="Account\ChangePasswordSuccess.aspx" />
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="Images\aprobar.png" />
     <Content Include="Images\delItem.gif" />
     <Content Include="Images\editar.png" />
@@ -197,6 +198,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
