--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -1,9 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
-  <appSettings>
-    <add key="PathDestinoArchivosAFIPParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml"/>
-    <add key="PathDestinoArchivosFacturaConCAE" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosPDF"/>
-    <add key="FTPAddress" value="ftp://endesafews/"/>
+  <appSettings>    
+    <add key="FTPAddress" value="ftp://localhost/"/>
     <add key="FTPUser" value="Adrian"/>
     <add key="FTPPassword" value="Adr1an"/>
   </appSettings>
