--- a/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
+++ b/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Code\Corrida\MaestroServiceProxy.cs" />
     <Compile Include="Code\Corrida\ProcesoCorridaWcfProxy.cs" />
     <Compile Include="Code\Ejecucion\EjecucionSubidaArchivos.cs" />
+    <Compile Include="Code\FtpClient.cs" />
     <Compile Include="Code\ServiceFactory.cs" />
     <Compile Include="FormAutorizador.cs">
       <SubType>Form</SubType>
