1) Cambio de mensaje cuando por error de formacion 3) Se agrega funcionalidad que pidio Martin para buscar por mas campos en la pantalla de usuario listado.

--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Contracts\Search\CorridaSearch.cs" />
     <Compile Include="Contracts\TipoComprobanteDto.cs" />
     <Compile Include="Contracts\TipoContratoDto.cs" />
+    <Compile Include="Contracts\UsuarioCriteria.cs" />
     <Compile Include="Contracts\UsuarioDto.cs" />
     <Compile Include="Contracts\VisualizacionComprobanteDto.cs" />
     <Compile Include="Contracts\WebServiceAfipDto.cs" />
