--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -26,8 +26,9 @@
         <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536"
+          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+          allowCookies="false">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
@@ -40,8 +41,9 @@
         <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536"
+          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+          allowCookies="false">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
@@ -54,8 +56,9 @@
         <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536"
+          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+          allowCookies="false">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
@@ -68,7 +71,22 @@
         <binding name="WSHttpBinding_ISubidaArchivoService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536" messageEncoding="Text"
+          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536"
+          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+          allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_IComprobanteService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
           textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
@@ -82,19 +100,26 @@
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc" 
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService" behaviorConfiguration="bigItemInGraph"
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
         contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc" binding="wsHttpBinding" behaviorConfiguration="bigItemInGraph"
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
         name="WSHttpBinding_IMaestrosService" />
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/AfipWrapperService.svc" behaviorConfiguration="bigItemInGraph"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
-        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService" />
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/SubidaArchivoService.svc" behaviorConfiguration="bigItemInGraph"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISubidaArchivoService"
-        contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/AfipWrapperService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService"
+        name="WSHttpBinding_IAfipWrapperService" />
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/SubidaArchivoService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
         name="WSHttpBinding_ISubidaArchivoService" />
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/ComprobanteService.svc"
+         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IComprobanteService"
+        contract="ServiceReferenceComprobanteService.IComprobanteService"
+        name="WSHttpBinding_IComprobanteService" />
     </client>
 
     <diagnostics>
