--- a/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
+++ b/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AfipWrapperService.svc" />
+    <Content Include="ComprobanteService.svc" />
     <Content Include="SubidaArchivoService.svc" />
     <Content Include="EmailTemplates\DocumentosPendientes.htm" />
     <Content Include="MaestroService.svc" />
