--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -27,11 +27,12 @@
     <authentication mode="Forms">
 			<forms loginUrl="~/Account/Login.aspx" 
              defaultUrl="~/Default.aspx" 
-             requireSSL="true"
+             requireSSL="false"
              timeout="2880"/>
 		</authentication>
     <authorization>
       <deny users="?"/>
+      <!--<allow users="*"/>-->
     </authorization>
 	</system.web>
   <location path="Styles">
