--- a/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
+++ b/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Code\Cert\CertUtil.cs" />
     <Compile Include="Code\Corrida\AfipWrapperWcfProxy.cs" />
     <Compile Include="Code\Corrida\ClientCredentialHelper.cs" />
+    <Compile Include="Code\Corrida\ComprobanteServiceProxy.cs" />
     <Compile Include="Code\Corrida\SubidaArchivoServiceProxy.cs" />
     <Compile Include="Code\Corrida\MaestroServiceProxy.cs" />
     <Compile Include="Code\Corrida\ProcesoCorridaWcfProxy.cs" />
@@ -139,6 +140,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\ServiceReferenceAfipWrapper\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Service References\ServiceReferenceComprobanteService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -248,6 +254,16 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\ServiceReferenceAfipWrapper\WsfeClient.wsdl" />
+    <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService.wsdl" />
+    <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\ServiceReferenceCorrida\ProcesoCorridaService1.wsdl" />
     <None Include="Service References\ServiceReferenceCorrida\ProcesoCorridaService4.xsd">
       <SubType>Designer</SubType>
@@ -314,6 +330,12 @@
     <Content Include="ENDESA-Cemsa-Ejemplo.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Service References\ServiceReferenceComprobanteService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Service References\ServiceReferenceComprobanteService\configuration.svcinfo" />
+    <None Include="Service References\ServiceReferenceComprobanteService\configuration91.svcinfo" />
     <None Include="Service References\ServiceReferenceSubidaArchivo\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -355,6 +377,7 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\ServiceReferenceAfipWrapper\" />
+    <WCFMetadataStorage Include="Service References\ServiceReferenceComprobanteService\" />
     <WCFMetadataStorage Include="Service References\ServiceReferenceCorrida\" />
     <WCFMetadataStorage Include="Service References\ServiceReferenceMaestro\" />
     <WCFMetadataStorage Include="Service References\ServiceReferenceSubidaArchivo\" />
