--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -134,6 +134,21 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
+        <binding name="WSHttpBinding_IComprobanteService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="555524288" maxReceivedMessageSize="55665536"
+          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
+          allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+              enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
       </wsHttpBinding>
     </bindings>
     <services>
@@ -156,6 +171,15 @@
                   binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
       </service>
+      <service name="FacturaElectronica.Business.Services.ComprobanteService" behaviorConfiguration="ProcesoCorridaBehavior" >
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="WSHttpBinding_IComprobanteService"
+                  contract="FacturaElectronica.Common.Services.IComprobanteService" />
+        <endpoint address="mex"
+                  binding="mexHttpsBinding"
+                  contract="IMetadataExchange" />
+      </service>
       <service name="FacturaElectronica.Business.Services.SubidaArchivoService" behaviorConfiguration="ProcesoCorridaBehavior" >
         <endpoint address=""
                   binding="wsHttpBinding"
@@ -174,6 +198,7 @@
                   binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
       </service>
+      
     </services>
     <behaviors>
       <serviceBehaviors>
