- Agregue cuadro con estado de los comprobantes - Agregue filtro por estado - Agregue estilos para los paneles colapsable para que aparezca la "manito" cuando pasa el mouse por arriba. - Arregle paginado.

--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Contracts\EmailConfiguration.cs" />
     <Compile Include="Contracts\EmailInThread.cs" />
     <Compile Include="Contracts\EstadoArchivoAsociadoDto.cs" />
+    <Compile Include="Contracts\EstadoComprobantesDto.cs" />
     <Compile Include="Contracts\LogCorridaDto.cs" />
     <Compile Include="Contracts\ObservacionComprobanteDto.cs" />
     <Compile Include="Contracts\RolDto.cs" />
