--- a/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
+++ b/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
@@ -66,6 +66,7 @@
     <Content Include="Images\editItem.png" />
     <Content Include="Images\eliminar.png" />
     <Content Include="Images\excel.png" />
+    <Content Include="Images\header_estados.png" />
     <Content Include="Images\icon_blockcollapsed.png" />
     <Content Include="Images\icon_blockexpanded.png" />
     <Content Include="Images\importar.png" />
@@ -86,10 +87,13 @@
     <Content Include="Images\key.gif" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\logoubatic.jpg" />
+    <Content Include="Images\no_visualizado.png" />
+    <Content Include="Images\no_visualizado_vencido.png" />
     <Content Include="Images\pdf.png" />
     <Content Include="Images\roller.gif" />
     <Content Include="Images\roller_orange.gif" />
     <Content Include="Images\viewItem.png" />
+    <Content Include="Images\visualizado.png" />
     <Content Include="Images\warning.png" />
     <Content Include="Pages\CambiarPassword.aspx" />
     <Content Include="Pages\ClienteDetalle.aspx" />
@@ -305,14 +309,6 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\ApiAutenticacion\trunk\src\WebFramework\Web.Framework.csproj">
-      <Project>{0EEED093-28DA-4ACB-BC25-E961C55E72C6}</Project>
-      <Name>Web.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\PlanProduccion\trunk\src\Web.Framework.Svc\Web.Framework.Svc.csproj">
-      <Project>{272A4403-5F67-4EE0-A52E-C7A744230563}</Project>
-      <Name>Web.Framework.Svc</Name>
-    </ProjectReference>
     <ProjectReference Include="..\FacturaElectronica.Afip.Business\FacturaElectronica.Afip.Business.csproj">
       <Project>{AE2952B6-C7D3-4C5B-ADC2-97C08D01B593}</Project>
       <Name>FacturaElectronica.Afip.Business</Name>
@@ -340,8 +336,8 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>False</AutoAssignPort>
-          <DevelopmentServerPort>1094</DevelopmentServerPort>
+          <AutoAssignPort>True</AutoAssignPort>
+          <DevelopmentServerPort>62944</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>https://localhost/FacturaElectronicaWeb</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
