--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -20,8 +20,12 @@
     <add key="MailFrom" value="test@test.com" />
     <add key="MailReplayTo" value="test@test.com" />
     <add key="MailBodyPathHtml" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\trunk\src\FacturaElectronica.Ws.Host\EmailTemplates\DocumentosPendientes.htm" />
-    <add key="MailHost" value="" />
-    <add key="MailPort" value="" />       
+    <add key="MailHost" value="smtp.gmail.com" />
+    <add key="MailPort" value="587" />
+    <add key="MailUserName" value="adm.net@gmail.com" />
+    <add key="MailPassword" value="" />
+    <add key="MailEnableSSL" value="true" />
+    <add key="MailDefaultCredentials" value="false" />
 
     <!--CurrentUser-->
   </appSettings>
