--- a/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
+++ b/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Code\Ejecucion\EjecucionSubidaArchivos.cs" />
     <Compile Include="Code\FtpClient.cs" />
     <Compile Include="Code\ServiceFactory.cs" />
+    <Compile Include="Code\Validaciones.cs" />
     <Compile Include="FormAutorizador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -199,7 +200,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\DataSources\FacturaElectronica.Afip.Ws.Wsfe.CbteTipoResponse.datasource" />
     <None Include="Properties\DataSources\FacturaElectronica.Afip.Ws.Wsfe.ConceptoTipoResponse.datasource" />
     <None Include="Properties\DataSources\FacturaElectronica.Afip.Ws.Wsfe.DocTipoResponse.datasource" />
