--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -148,7 +148,7 @@
               maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
               enabled="false" />
-          <security mode="TransportWithMessageCredential">
+          <security mode="None">
             <transport clientCredentialType="None" proxyCredentialType="None"/>
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
