--- a/src/FacturaElectronica.Business/FacturaElectronica.Business.csproj
+++ b/src/FacturaElectronica.Business/FacturaElectronica.Business.csproj
@@ -50,12 +50,13 @@
     <Compile Include="Services\ComprobanteService.cs" />
     <Compile Include="Services\CorridaService.cs" />
     <Compile Include="Services\MaestrosSevice.cs" />
+    <Compile Include="Services\MensajeService.cs" />
     <Compile Include="Services\SeguridadService.cs" />
     <Compile Include="Services\SubidaArchivoService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\ApiAutenticacion\trunk\src\WebFramework\Web.Framework.csproj">
+    <ProjectReference Include="..\..\..\..\..\..\Adrian\VesubioSVN\vesuapiauth\trunk\src\WebFramework\Web.Framework.csproj">
       <Project>{0EEED093-28DA-4ACB-BC25-E961C55E72C6}</Project>
       <Name>Web.Framework</Name>
     </ProjectReference>
