--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Contracts\EstadoArchivoAsociadoDto.cs" />
     <Compile Include="Contracts\EstadoComprobantesDto.cs" />
     <Compile Include="Contracts\LogCorridaDto.cs" />
+    <Compile Include="Contracts\LogCriteria.cs" />
+    <Compile Include="Contracts\MensajeCriteria.cs" />
+    <Compile Include="Contracts\MensajeDto.cs" />
     <Compile Include="Contracts\ObservacionComprobanteDto.cs" />
     <Compile Include="Contracts\RolDto.cs" />
     <Compile Include="Contracts\SearchResult.cs" />
@@ -75,6 +78,7 @@
     <Compile Include="Contracts\VisualizacionComprobanteDto.cs" />
     <Compile Include="Contracts\WebServiceAfipDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMensajeService.cs" />
     <Compile Include="Services\IProcesoCorridaService.cs" />
     <Compile Include="Services\IClienteService.cs" />
     <Compile Include="Services\IComprobanteService.cs" />
