Entrada para path de mensajes y Alertas

--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -62,5 +62,6 @@
   <appSettings>
     <add key="cantUltimosReg" value="10"/>
     <add key="siteCompany" value="http://www.endesacemsa.com/"/>
+    <add key="pathMensajesYAlertas" value="C:\Diego\Proyectos\Tecnosop\FacturaElectronica\Codigo\trunk\src\TestFiles\MensajesAlertas" />
   </appSettings>
 </configuration>
