--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -100,10 +100,6 @@
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
-        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
-        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
@@ -117,9 +113,12 @@
         bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
         name="WSHttpBinding_ISubidaArchivoService" />
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/ComprobanteService.svc"
-         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IComprobanteService"
-        contract="ServiceReferenceComprobanteService.IComprobanteService"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IComprobanteService" contract="ServiceReferenceComprobanteService.IComprobanteService"
         name="WSHttpBinding_IComprobanteService" />
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
     </client>
 
     <diagnostics>
