--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Contracts\EstadoArchivoAsociadoDto.cs" />
     <Compile Include="Contracts\EstadoComprobantesDto.cs" />
     <Compile Include="Contracts\LogCorridaDto.cs" />
+    <Compile Include="Contracts\MensajeClienteCriteria.cs" />
+    <Compile Include="Contracts\MensajeClienteDto.cs" />
     <Compile Include="Contracts\MensajeCriteria.cs" />
     <Compile Include="Contracts\MensajeDto.cs" />
     <Compile Include="Contracts\ObservacionComprobanteDto.cs" />
