--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -8,10 +8,16 @@
 <configuration>
 
   <appSettings>
-    <add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
+    <!--<add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
     <add key="idServicioNegocio" value="wsfe" />
     <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
     <add key="cuit" value="23289508759" />
+    <add key="storeName" value="TrustedPeople" />
+    <add key="storeLocation" value="LocalMachine" />-->
+    <add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
+    <add key="idServicioNegocio" value="wsfe" />
+    <add key="certSigner" value="C=AR, O=ENDESA CEMSA S.A., SERIALNUMBER=CUIT 30691607050, CN=ENDESAFEPROD" />
+    <add key="cuit" value="30691607050" />
     <add key="storeName" value="TrustedPeople" />
     <add key="storeLocation" value="LocalMachine" />
 
@@ -108,8 +114,8 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
-        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
-           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:02:00"
+           openTimeout="00:11:00" receiveTimeout="00:15:00" sendTimeout="00:15:00"
            bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
            maxBufferPoolSize="555524288" maxReceivedMessageSize="55665536"
            messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
@@ -148,7 +154,7 @@
               maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
               enabled="false" />
-          <security mode="None">
+          <security mode="TransportWithMessageCredential">
             <transport clientCredentialType="None" proxyCredentialType="None"/>
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
@@ -229,10 +235,16 @@
       </behaviorExtensions>
     </extensions>
     <client>
-      <endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
+      <!--<endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
         binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
         contract="Wsaa.LoginCMS" name="LoginCms" />
       <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
+        contract="Wsfe.ServiceSoap" name="ServiceSoap" />-->
+      <endpoint address="https://wsaa.afip.gov.ar/ws/services/LoginCms"
+       binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
+       contract="Wsaa.LoginCMS" name="LoginCms" />
+      <endpoint address="https://servicios1.afip.gov.ar/wsfev1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="Wsfe.ServiceSoap" name="ServiceSoap" />
     </client>
